<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.album.ListAlbumsFragment">

    <ProgressBar
        android:id="@+id/albumListProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_album_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add_button"
        android:backgroundTint="@null"
        android:elevation="4dp"
        android:text="@string/album_add_new_button"
        android:textColor="@color/mainTextColor"
        android:textStyle="bold" />

</FrameLayout>